{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 32,
  "lineage": "c899a39d-4417-4ea0-9a80-fcc0e657f67c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-23T10:48:41.002-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prod-gcp-2026/global/firewalls/allow-http-tf",
            "log_config": [],
            "name": "allow-http-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/prod-gcp-2026/global/networks/custom-vpc1",
            "params": [],
            "priority": 1000,
            "project": "prod-gcp-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-gcp-2026/global/firewalls/allow-http-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-23T10:35:21.366-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prod-gcp-2026/global/firewalls/allow-ssh-tf",
            "log_config": [],
            "name": "allow-ssh-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/prod-gcp-2026/global/networks/custom-vpc1",
            "params": [],
            "priority": 1000,
            "project": "prod-gcp-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-gcp-2026/global/firewalls/allow-ssh-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "description": "vpc created from TF",
            "enable_ula_internal_ipv6": false,
            "id": "projects/prod-gcp-2026/global/networks/custom-vpc1",
            "mtu": 0,
            "name": "custom-vpc1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "423261999244120861",
            "numeric_id": "423261999244120861",
            "project": "prod-gcp-2026",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-gcp-2026/global/networks/custom-vpc1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-23T09:21:01.703-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/prod-gcp-2026/regions/us-central1/subnetworks/subnet-x",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "subnet-x",
            "network": "https://www.googleapis.com/compute/v1/projects/prod-gcp-2026/global/networks/custom-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prod-gcp-2026",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-gcp-2026/regions/us-central1/subnetworks/subnet-x",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1210182894
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    }
  ]
}